--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,21 +2,21 @@
     <string name="app_name">MyToDo</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="no_data">No Data</string>
-    <string name="title">Title</string>
-    <string name="description">Description</string>
-    <string name="search">Search</string>
-    <string name="sort_by">Sort By</string>
-    <string name="priority_high">Priority High</string>
-    <string name="priority_low">Priority Low</string>
-    <string name="delete_all">Delete All</string>
-    <string name="add">Add</string>
-    <string name="save">Save</string>
-    <string name="delete">Delete</string>
+    <string name="no_data">没有内容</string>
+    <string name="title">标题</string>
+    <string name="description">描述</string>
+    <string name="search">查找</string>
+    <string name="sort_by">排序</string>
+    <string name="priority_high">高优先级</string>
+    <string name="priority_low">低优先级</string>
+    <string name="delete_all">全部删除</string>
+    <string name="add">添加</string>
+    <string name="save">保存</string>
+    <string name="delete">删除</string>
 
     <string-array name="priorities">
-        <item>High Priority</item>
-        <item>Medium Priority</item>
-        <item>Low Priority</item>
+        <item>优先级 高</item>
+        <item>优先级 中</item>
+        <item>优先级 低</item>
     </string-array>
 </resources>
